# app-tools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
app_tools/: __init__.py
app_tools/scripts/: __init__.py  app-tools-prepare_run_directories  app-tools-prepare_runs  app-tools-yodamerge  app-tools-yodamerge_directories  chi_squared.py  combine_weights.py  compute_chi2.py  create_grid.py  merge_surrogates.py  plot_chi2.py  split_build_process.py  split_reweighted_runs.py  split_reweighting.py  split_weights.py  write_weights.py
sherpa/: README.md  build.jdf  run_app-build.sh  run_sherpa.sh  sherpa.jdf
